# Device-scanner

./: .gitignore  database.py  device_guesser.py  devices.db  main.py  network_dataclasses.py  pyproject.toml  scanner.py
image/: Dockerfile
src/api/: __init__.py  schemas.py
src/database/: __init__.py  crud.py  database.py  models.py
src/engine/: __init__.py  db_writer.py  device_guesser.py  scanner.py  types.py
